--- a/public/index.html
+++ b/public/index.html
@@ -305,7 +305,8 @@
       }
 
       .header {
-        background-color: #059edf;
+        background-image: url(/headbartext.svg);
+        background-repeat: repeat-x;
         color: #ffffff;
         padding: 1px;
         text-align: center;
@@ -320,7 +321,7 @@
       }
 
       .footer {
-        background-color: #0099cc;
+        background-image: url(/headbartext.svg);
         color: #ffffff;
         text-align: center;
         font-size: 10px;
